--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <canvas class="canvas1" id="canvas1"></canvas>
     <script  src="js/main.js"></script>
     
 </body>
